# HairSimulation

./: CMakeLists.txt  README.md
ext/freeglut-3.0.0/lib/Release/: freeglut.lib
src/: CMakeLists.txt  hair.cpp  hair.h  input.cpp  input.h  pic.cpp  ppm.cpp  show.cpp  show.h  simu.cpp  simu.h  world.cpp
